@startuml ERM
title
<font size=16 color=black>ER-модель
end title

entity Person {
    id
    username
    publickey
    qualities
}

entity Role {
    id
    name
}

entity Task {
    id
    details
}

entity Signature {
    rawdata
}

entity Artefact {
    id
    uniqueName
    details
}

entity ArtefactRole {
    id
    type
}

entity Project {
    id
    name
}

Signature "0,*"--"1,1" Task
Signature "0,*"--"1,1" Person
Signature "0,*"--"1,1" Role

Role "0,*"--"1,1" Project

RoleLink "0,*"--"1,1" Role
RoleLink "0,*"--"1,1" Person

Task "0,*"--"1,1" Person
Task "0,*"--"1,1" Project

ArtefactLink "0,*"--"1,1" Artefact
ArtefactLink "0,*"--"1,1" Task
ArtefactLink "0,*"--"1,1" ArtefactRole

right footer
НТУУ КПІ ім.І.Сікорського
Киів, 2020
end footer
@enduml
